ImmutableXXX.of() -> XXX.of() methods in Test